# Workshop-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  LANGREF  README.md
ast/: Assignment.h  Assignment.hpp  BinaryExpression.cpp  BinaryExpression.h  BinaryExpression.hpp  Block.cpp  Block.h  Block.hpp  CMakeLists.txt  ConditionalExpression.h  ConditionalExpression.hpp  Constant.h  Constant.hpp  DumpGraph.cpp  DumpGraph.h  Expression.cpp  Expression.h  Expression.hpp  ExpressionFactory.cpp  ExpressionFactory.h  ExpressionFactory.hpp  Identifier.h  Identifier.hpp  Number.h  Number.hpp  PrintExpression.h  PrintExpression.hpp  SymbolMap.h  SymbolMap.hpp  UnaryExpression.cpp  UnaryExpression.h  UnaryExpression.hpp  Undefined.h  Undefined.hpp  Value.h  Value.hpp
docs/html/: _assignment_8h_source.html  (+79 more)
main/: CMakeLists.txt  main.cpp
misc/: llvm.bat
parser/: CMakeLists.txt  Lexer.cpp  Lexer.h  Lexer.hpp  Parser.cpp  Parser.h  Parser.hpp
test/: CMakeLists.txt  functional-abs.in  functional-abs.in.ref  functional-fib.in  functional-fib.in.ref  functional-gcd.in  functional-loop.in  integration-assign-blocks-parantheses.in  integration-assign-if.in  integration-assign.in  integration-binary.in  integration-block-ref.in  integration-double-op.in  integration-else.in  integration-if-block.in  integration-if.in  integration-unary.in  integration-unary2.in  integration-undefined.in  unit-assign.in  unit-binary-plus.in  unit-binary-priorities.in  unit-empty-block-eval.in  unit-print2.in  unit-simple-block-eval.in  unit-simple-block.in  unit-unary-plus-expression.in  unit-undefined.in
(+29 files in other folders)
